docs: Updated docs  and CHANGELOG

--- a/AgrIA_server/.env.example
+++ b/AgrIA_server/.env.example
@@ -10,7 +10,7 @@ MINIO_ACCESS_KEY=minio-access-key
 MINIO_SECRET_KEY="minio-secret-key"
 bucket_name="bucket-name"
 
-GEOMETRY_FILE = geometry-file.kml
+GEOMETRY_FILE = path/to/geometry-file.kml
 
 COPERNICUS_CLIENT_ID=copernicusl-client-id
 COPERNICUS_CLIENT_SECRET=copernicus-client-secret
