--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,33 @@
+# Common
+.git-credentials
+
+# Backend
+.env
+*temp*
+.venv
+*__pycache__/
+*.kml
+*.png
+*.tif*
+*.tsv
+*assets/.scripts
+*model*
+*data*
+*res*
+*out*
+server/benchmark/vlm/**/*.json
+
+# Frontend
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist
+*/dist
 /tmp
 /out-tsc
 /bazel-out
 
 # Node
-/node_modules
+*/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -21,6 +41,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
+.vscode*
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
