--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *temp*
 .venv
 *__pycache__/
+*.pytest_cache/
 *.kml
 *.png
 *.tif*
@@ -15,7 +16,7 @@
 *data*
 *res*
 *out*
-server/benchmark/vlm/**/*.json
+*.json
 
 # Frontend
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
