tests: Added coverage for Ecoschemes Classif. algorithm (happy path) + chore: Updated packages + remove file

--- a/AgrIA_server/environment.yml
+++ b/AgrIA_server/environment.yml
@@ -27,6 +27,7 @@ dependencies:
       - Pillow
       - protobuf
       - pytest
+      - pytest-mock
       - python-dotenv
       - requests
       - rioxarray
