Chore: Moved env file to root dir + Set optional fixed values

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 # Replace variables with your data and rename file to ".env"
 GEMINI_API_KEY=YOUR_API_KEY
-UI_URL=YOUR_FRONTEND_URL
-API_PORT=XXXX
-API_URL=http://yourApiDomain.com
+UI_PORT=XXXX
+UI_URL=http://yourApiDomain:${UI_PORT}*
+API_PORT=5000
+API_URL=http://yourApiDomain:${API_PORT}
+DOCKER_PORT=5001
+DOCKER_BACKEND_URL=http://backend:${API_PORT}
 
 # Contact authors to gain access to these database credentials and files
-MINIO_ENDPOINT=255.000.000.000:0000
+MINIO_ACCESS_PORT=AAAA
+MINIO_ENDPOINT=255.000.000.000:${MINIO_ACCESS_PORT}
 MINIO_ACCESS_KEY=minio-access-key
 MINIO_SECRET_KEY="minio-secret-key"
 bucket_name="bucket-name"
