--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,19 @@
 *out*
 *.json
 
+# Docker/Compose metadata
+.dockerignore
+
 # Frontend
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
+.angular/
 */dist
 /tmp
 /out-tsc
 /bazel-out
+.mambabuild
 
 # Node
 */node_modules
