Feat: Ordered env vars + Added Docker env vars. + Chore: Grouped env vars in logic

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
 # Replace variables with your data and rename file to ".env"
 GEMINI_API_KEY=YOUR_API_KEY
-UI_PORT=XXXX
-UI_URL=http://yourApiDomain:${UI_PORT}*
+
+# Fronted config (default values)
+UI_PORT=4200
+UI_HOST=locahost
+UI_URL=http://${UI_HOST}:${UI_PORT}*
+
+# BackendFronted config (default values)
 API_PORT=5000
-API_URL=http://yourApiDomain:${API_PORT}
+API_HOST=127.0.0.1
+API_URL=http://${API_HOST}:${API_PORT}
+
+# Docker config (default values | for deployment)
 DOCKER_PORT=5001
-DOCKER_BACKEND_URL=http://backend:${API_PORT}
+DOCKER_HOST=backend
+DOCKER_BACKEND_URL=/api/
 
 # Contact authors to gain access to these database credentials and files
-MINIO_ACCESS_PORT=AAAA
+MINIO_ACCESS_PORT=0000
 MINIO_ENDPOINT=255.000.000.000:${MINIO_ACCESS_PORT}
 MINIO_ACCESS_KEY=minio-access-key
 MINIO_SECRET_KEY="minio-secret-key"
