Feat: Added Backend Docker files + Updated dependencies for docker (removed CUDA constraints)

--- a/AgrIA_server/environment-docker.yml
+++ b/AgrIA_server/environment-docker.yml
@@ -9,6 +9,7 @@ dependencies:
   - pandas
   # Geospatial stack (conda-forge compiled binaries! much faster/safer than pip wheels)
   - geopandas
+  - gunicorn  # Added for deployment
   - shapely
   - pyproj
   - rasterio
