Format: Removed unnecesarry comments

--- a/AgrIA_UI/Dockerfile
+++ b/AgrIA_UI/Dockerfile
@@ -1,38 +1,39 @@
-# --- STAGE 1: Build the Angular application ---
+# -----------------------
+# STAGE 1: Angular Build
+# -----------------------
 FROM node:20-alpine AS build
+
 ARG API_URL
 ENV API_URL_ENV=${API_URL}
-# 1. Set working directory
+
 WORKDIR /app
 
-# 2. Copy ALL files needed for the build.
-# We copy everything first to ensure environment.docker.ts is present.
-COPY . .
+# Copy only dependency files first (better build caching)
+COPY package*.json ./
 
-# 3. Install dependencies
-# We run npm install *after* copying package.json (which is included in COPY . .), 
-# to ensure it can read the package-lock.json if present.
 RUN npm install
 
-# 4. Inject the API URL into the environment file (FIXED POSITION)
-# The file now exists at /app/src/environments/environment.docker.ts
-RUN sed -i "s|apiUrl: 'http://backend:5000'|apiUrl: '${API_URL_ENV}'|" ./src/environments/environment.docker.ts
-# 5. Build the Angular app
-# This command runs inside /app, which contains node_modules and angular.json/package.json
+# Copy remaining app files
+COPY . .
+
+# Inject API URL
+RUN sed -i "s|apiUrl: 'http://backend:5000'|apiUrl: '${API_URL_ENV}'|" src/environments/environment.docker.ts
+
+# Build Angular optimized for Docker target
 RUN npm run build -- --configuration docker --base-href=/ --optimization=false
 
-# --- STAGE 2: Serve the application with Nginx (for production) ---
-# Use a very light Nginx image to serve the compiled static files
+
+# -----------------------
+# STAGE 2: Production Server
+# -----------------------
 FROM nginx:alpine
 
-# Copy the custom Nginx config (optional, but good practice for Angular routing)
-# If you don't have an nginx.conf, skip this line and the next line
+# Optional custom NGINX config (enables SPA routing)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy the built Angular files from the build stage to the Nginx static directory
+# Copy built app from previous stage
 COPY --from=build /app/dist/agria-ui/browser /usr/share/nginx/html
 
-# Angular runs on 4200 during development, but Nginx default is 80
 EXPOSE 80
 
-# The default Nginx CMD serves the static content
+# Nginx default CMD will serve the app
