--- a/AgrIA_UI/angular.json
+++ b/AgrIA_UI/angular.json
@@ -38,7 +38,8 @@
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -75,6 +76,10 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.docker.ts"
                 }
+              ],
+              "scripts": [
+                "./node_modules/leaflet/dist/leaflet.js",
+                "./node_modules/leaflet-draw/dist/leaflet.draw.js"
               ]
             }
           },
