--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -2,9 +2,10 @@ name: 1. CI - Quality and Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
+
 
 # BEST PRACTICE: Uses Concurrency to avoid unnecessary parallel executions
 concurrency:
@@ -32,7 +33,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: AgrIA_UI/node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('AgrIA_UI/package-lock.json') }}
+        key: ${{ runner.os }}-node-${{ hashFiles('AgrIA_UI/package-lock.json') }} # use commit's SHA to generate a single cache
         restore-keys: |
           ${{ runner.os }}-node-
           
