CI/CD: Made FE/BE testing parallele

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -17,47 +17,53 @@ permissions:
   contents: read 
 
 jobs:
-  unit_tests:
+# Job 1: Pruebas del Frontend (Angular)
+  test_frontend:
+    name: Frontend Tests (Angular)
     runs-on: ubuntu-latest
     steps:
-    - name: 1. Checkout Code
-      uses: actions/checkout@v4
+      - name: 1. Checkout Code
+        uses: actions/checkout@v4
 
-    # --- Node.js Cache Setup (Frontend) ---
-    - name: 2. Setup Node.js 20
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        
-    - name: 3. Restore Node Cache
-      uses: actions/cache@v4
-      with:
-        path: AgrIA_UI/node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('AgrIA_UI/package-lock.json') }} # use commit's SHA to generate a single cache
-        restore-keys: |
-          ${{ runner.os }}-node-
+      # --- Node.js Cache Setup (Frontend) ---
+      - name: 2. Setup Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
           
-    - name: 4. Install Frontend Dependencies
-      run: npm install
-      working-directory: AgrIA_UI
+      - name: 3. Restore Node Cache
+        uses: actions/cache@v4
+        with:
+          path: AgrIA_UI/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('AgrIA_UI/package-lock.json') }} # use commit's SHA to generate a single cache
+          restore-keys: |
+            ${{ runner.os }}-node-
+            
+      - name: 4. Install Frontend Dependencies
+        run: npm install
+        working-directory: AgrIA_UI
 
-    # Angular Tests
-    - name: 5. Run Frontend Tests
-      run: npm test -- --watch=false --no-progress --browsers=ChromeHeadless
-      working-directory: AgrIA_UI
-      continue-on-error: true 
+      # Angular Tests
+      - name: 5. Run Frontend Tests
+        run: npm test -- --watch=false --no-progress --browsers=ChromeHeadless
+        working-directory: AgrIA_UI
+        continue-on-error: true 
 
     # --- Setup Conda (Backend) ---
-    - name: 6. Setup Conda Environment (Mamba)
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        activate-environment: agria_server_env
-        environment-file: AgrIA_server/environment-docker.yml
-        auto-activate-base: false
-    
-    # Python/Flask Tests w/ Pytest
-    - name: 7. Run Backend Tests
-      run: |
-        cd AgrIA_server
-        mamba run -n agria_server_env python -m pytest
-      continue-on-error: true
+    test_backend:
+    name: Backend Tests (Python)
+    runs-on: ubuntu-latest
+    steps:
+      - name: 6. Setup Conda Environment (Mamba)
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          activate-environment: agria_server_env
+          environment-file: AgrIA_server/environment-docker.yml
+          auto-activate-base: false
+      
+      # Python/Flask Tests w/ Pytest
+      - name: 7. Run Backend Tests
+        run: |
+          cd AgrIA_server
+          mamba run -n agria_server_env python -m pytest
+        continue-on-error: true
