--- a/AgrIA_server/environment-docker.yml
+++ b/AgrIA_server/environment-docker.yml
@@ -19,6 +19,8 @@ dependencies:
   - pip
   - pip:
       # Core backend
+      - flake8
+      - autopep8
       - Flask
       - flask
       - flask-cors
