--- a/AgrIA_server/environment.yml
+++ b/AgrIA_server/environment.yml
@@ -18,6 +18,8 @@ dependencies:
   - pip
   - pip:
       # Core backend
+      - flake8
+      - autopep8
       - Flask
       - flask
       - flask-cors
