--- a/AgrIA_UI/package.json
+++ b/AgrIA_UI/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "agri-multimodel",
-  "version": "1.0.0",
+  "name": "agria-ui",
+  "version": "1.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "format": "prettier --write \"src/**/*.{ts,html,scss,json}\""
-
   },
   "private": true,
   "dependencies": {
