test: Fixed issue for `GEMINI_API_KEY = None`
- AgrIA will work but not the Chat Assistant. This is done to help CI run the backend tests

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-# Replace variables with your data and rename file to ".env"
-GEMINI_API_KEY=YOUR_API_KEY
+# --------------------------------------
+# ESSENTIAL DEVELOPER VARIABLES
+#--------------------------------------
 
-# Fronted config (default values)
+# LLM variable
+GEMINI_API_KEY=  # YOUR_API_KEY
+
+# Frontend config (default values)
 UI_PORT=4200
 UI_HOST=locahost
 UI_URL=http://${UI_HOST}:${UI_PORT}*
@@ -11,12 +15,20 @@ API_PORT=5000
 API_HOST=127.0.0.1
 API_URL=http://${API_HOST}:${API_PORT}
 
+# --------------------------------------
+# ESSENTIAL DEPLOYMENT VARIABLES
+#--------------------------------------
+
 # Docker config (default values | for deployment)
 DOCKER_PORT=5001
 DOCKER_HOST=backend
 DOCKER_BACKEND_URL=/api/
 
-# Contact authors to gain access to these database credentials and files
+# --------------------------------------
+# OPTIONAL VARIABLES
+#--------------------------------------
+
+# Contact authors to gain access to these database credentials and geometry files
 MINIO_ACCESS_PORT=0000
 MINIO_ENDPOINT=255.000.000.000:${MINIO_ACCESS_PORT}
 MINIO_ACCESS_KEY=minio-access-key
@@ -25,6 +37,7 @@ bucket_name="bucket-name"
 
 GEOMETRY_FILE = path/to/geometry-file.kml
 
+# Use a free Copernicus account - vars used for benchmark purposes
 COPERNICUS_CLIENT_ID=copernicusl-client-id
 COPERNICUS_CLIENT_SECRET=copernicus-client-secret
 COPERNICUS_CONFIG_NAME=any-config-name
