--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -99,6 +99,38 @@ jobs:
         shell: bash -l {0}
         working-directory: AgrIA_server
         env:
-          PYTHONPATH: . 
+          # 1. Essential Config
+          PYTHONPATH: .
+          
+          # 2. Mock LLM Credentials
+          GEMINI_API_KEY: "mock_gemini_key_for_ci"
+
+          # 3. Mock Frontend/Backend Configs
+          UI_PORT: "4200"
+          UI_HOST: "localhost"
+          UI_URL: "http://localhost:4200"
+          API_PORT: "5000"
+          API_HOST: "127.0.0.1"
+          API_URL: "http://127.0.0.1:5000"
+
+          # 4. Mock Deployment Vars
+          DOCKER_PORT: "5001"
+          DOCKER_HOST: "backend"
+          DOCKER_BACKEND_URL: "/api/"
+
+          # 5. Mock Database/Storage (MinIO)
+          MINIO_ACCESS_PORT: "9000"
+          MINIO_ENDPOINT: "127.0.0.1:9000"
+          MINIO_ACCESS_KEY: "mock_minio_user"
+          MINIO_SECRET_KEY: "mock_minio_password"
+          bucket_name: "mock-test-bucket"
+
+          # 6. Mock Files
+          GEOMETRY_FILE: "tests/fixtures/dummy_geometry.kml"
+
+          # 7. Mock Copernicus (Fixes your specific crash)
+          COPERNICUS_CLIENT_ID: "mock_copernicus_id"
+          COPERNICUS_CLIENT_SECRET: "mock_copernicus_secret"
+          COPERNICUS_CONFIG_NAME: "mock_copernicus_config"
         run: |
           python -m pytest -vv
