--- a/AgrIA_server/environment.yml
+++ b/AgrIA_server/environment.yml
@@ -1,52 +1,63 @@
 name: agria_server_env
+
 channels:
   - conda-forge
   - defaults
+  - pytorch
+
 dependencies:
   - python=3.11
-  # Core scientific stack
-  - numpy<2   # Avoid numpy 2 for now due to compatibility issues with torch
+
+  # ---------- Core scientific stack ----------
+  - numpy<2
   - pandas
-  # Geospatial stack (conda-forge compiled binaries! much faster/safer than pip wheels)
+
+  # ---------- Geospatial stack (conda-forge only!) ----------
   - geopandas
   - shapely
   - pyproj
   - rasterio
   - fiona
   - gdal
-  # pip available
+
+  # ---------- Runtime ----------
   - pip
+
+  # PyTorch + CUDA via conda
+  - pytorch=2.4.*
+  - torchvision
+  - torchaudio
+
   - pip:
-      # Core backend
-      - flake8
-      - autopep8
-      - Flask
+      # --- Web backend ---
       - flask
       - flask-cors
-      - google.genai
-      - matplotlib
+      - python-dotenv
+
+      # --- LLM / GenAI ---
+      - google-genai
+
+      # --- Utilities ---
+      - requests
+      - structlog
       - minio
-      - opencv-python<4.12  # Avoid opencv 4.12 for now due to compatibility issues with torch & numpy
       - Pillow
       - protobuf
+      - matplotlib
+
+      # --- Image / EO ---
+      - opencv-python<4.12
+      - scikit-image
+      - rioxarray
+      - sentinelhub
+      - safetensors
+
+      # --- Testing / Dev ---
       - pytest
       - pytest-mock
-      - python-dotenv
-      - requests
-      - rioxarray
-      - safetensors
-      - sentinelhub
-      - scikit-image
+      - flake8
+      - autopep8
 
-      # PyTorch with CUDA 12.1 (instead of generic torch/torchvision)
-      - torch==2.4.1+cu121
-      - torchvision==0.19.1+cu121
-      - -f https://download.pytorch.org/whl/torch_stable.html
-
-      # SEN2SR stack
-      - sen2sr
-      - mlstac
-      - git+https://github.com/ESDS-Leipzig/cubo.git
-
-      # Full version only (requires CUDA > 12 & GPU runtime!)
-      # Needs manual: pip install mamba-ssm --no-build-isolation
+      # --- External tools ---
+      - git+https://github.com/KhaosResearch/sen2sr-tools.git@main
+      - git+https://github.com/KhaosResearch/sigpac-tools.git@dev
