--- a/AgrIA_server/environment-docker.yml
+++ b/AgrIA_server/environment-docker.yml
@@ -1,54 +1,61 @@
 name: agria_server_env
+
 channels:
+  - pytorch
   - conda-forge
   - defaults
+
 dependencies:
   - python=3.11
+
   # Core scientific stack
-  - numpy<2   # Avoid numpy 2 for now due to compatibility issues with torch
+  - numpy<2        # Torch compatibility
   - pandas
-  # Geospatial stack (conda-forge compiled binaries! much faster/safer than pip wheels)
+
+  # Web / deployment
+  - gunicorn
+
+  # Geospatial stack (conda binaries = safer in Docker)
   - geopandas
-  - gunicorn  # Added for deployment
   - shapely
   - pyproj
   - rasterio
   - fiona
   - gdal
-  # pip available
+
+  # PyTorch CPU-only (portable, no CUDA assumptions)
+  - pytorch=2.4.*
+  - torchvision
+
+  # Utilities
   - pip
+
   - pip:
-      # Core backend
-      - flake8
-      - autopep8
-      - Flask
+      # Backend
       - flask
       - flask-cors
-      - google.genai
-      - matplotlib
+      - python-dotenv
+      - google-genai
+      - structlog
       - minio
-      - opencv-python<4.12  # Avoid opencv 4.12 for now due to compatibility issues with torch & numpy
-      - Pillow
+      - requests
+
+      # Data / imaging
+      - matplotlib
+      - pillow
+      - opencv-python<4.12
+      - scikit-image
+      - rioxarray
+      - sentinelhub
+      - safetensors
       - protobuf
+
+      # Dev / QA (optional in prod image)
       - pytest
       - pytest-mock
-      - python-dotenv
-      - requests
-      - rioxarray
-      - safetensors
-      - sentinelhub
-      - scikit-image
-      - structlog
-      
-      # PyTorch without CUDA 12.1
-      - torch==2.4.1
-      - torchvision==0.19.1
-      - -f https://download.pytorch.org/whl/torch_stable.html
+      - flake8
+      - autopep8
 
-      # SEN2SR stack
-      - sen2sr
-      - mlstac
-      - git+https://github.com/ESDS-Leipzig/cubo.git
-
-      # Full version only (requires CUDA > 12 & GPU runtime!)
-      # Needs manual: pip install mamba-ssm --no-build-isolation
+      # --- External tools ---
+      - git+https://github.com/KhaosResearch/sen2sr-tools.git@main
+      - git+https://github.com/KhaosResearch/sigpac-tools.git@dev
